--- a/thesis-template-page.html
+++ b/thesis-template-page.html
@@ -17,7 +17,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/6567211be4c91a98195540d3fc66afdf">
+                        <a href="https://www.papeeria.com/templates#type:thesis+classicthesis">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -31,7 +31,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/ca4100dce4ccab5a0756229d67f75fbb">
+                        <a href="https://www.papeeria.com/templates#type:thesis+masters/doctoral">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -45,7 +45,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://papeeria.com/p/eb58c2dc63832ffe20bcdba230559a53">
+                        <a href="https://www.papeeria.com/templates#type:thesis+maggi+memoir">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -59,7 +59,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://papeeria.com/p/d6cc91a530bfc91b897d37501d486147">
+                        <a href="https://www.papeeria.com/templates#type:thesis+toptesi">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -77,7 +77,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://papeeria.com/p/50162546ac6dafd98cd0d9004ef4afe9">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:byu">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -91,7 +91,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/94b1d1a649d0e2ce58e700f647713048?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:umich">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -105,7 +105,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/9c867a65887332f8191bd9ac2aba062b?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:iiitd">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -120,7 +120,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/1120a91233bb6c41f5a7961e8f69d584?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:iitk">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -134,7 +134,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/204698281c708d22f5b6c775dfd4207c?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:ic">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -148,7 +148,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/6bca7fd292fc4dbba05f2e065ed58392?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:leidenuniv">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -168,7 +168,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/f4f9b2818da6e3a9388f29af579c29ff?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:psu">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -182,7 +182,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/ba27e97b4638e2d8c56e19b146b0e528?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:pu">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -202,7 +202,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/7cf38e63c2c4ce13e055f106f47267be?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:purdue">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -216,7 +216,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/faf859eb8940cc1e4136e5af64ee694d?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:stan">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -230,7 +230,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/9984f3cc5f58df085443c73b844b84d2?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:tamu">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -244,7 +244,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/4d5c436dd24043e08c5a7596a2fa8096?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:uw">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -258,7 +258,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/e5d103f5d883703bb1c10d3234cecdf6?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:ucl+ucl+thesis">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -272,7 +272,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/1691e3079d323b5d11be614a9a4cb5c1?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:ucsd">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -286,7 +286,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/fe246eedaf1b70bfa7c2fb72b9c18742?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:bristol">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -300,7 +300,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/2460a4e7f1c7813b93edc205257cd025?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+california+at+davis">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -320,7 +320,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/08d1277c54d7a1ffbe837065299395a6?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:cambridge">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -334,7 +334,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/2c72d0fcb360b2e501ce7e3e772bb8d3?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:ed">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -348,7 +348,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/f2fb308fb11ee4aa837dac5aab909a8e?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:uiuc">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -365,7 +365,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/db1e9461d8e50137fe9dd4792501f663?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:ox">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -381,7 +381,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/623dc7a6cdcad9ea1af0172fbbee4f81?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:soton">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -395,7 +395,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/2950e295ac9eeba555c5834e82a1f6e6?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:us+sussex">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -409,7 +409,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/05c98a82d5a3a49ec16105d821597910?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:ut+tennessee">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -427,7 +427,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/9618b281b9bdb50cb3f41bee66e8caf5?withLastOpenedFile=false">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:warwick">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
@@ -441,7 +441,7 @@
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="template-item">
                     <div class="open-template">
-                        <a href="https://www.papeeria.com/p/15f00886167f77167ed2958367a703ee">
+                        <a href="https://www.papeeria.com/templates#type:thesis+org:yale">
                             <div class="open-template-text">Open Template</div>
                         </a>
                     </div>
