--- a/thesis-template-page.html
+++ b/thesis-template-page.html
@@ -7,23 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-   <!-- <link rel="stylesheet/less" type="text/css" href="template-page-style.css" />-->
-    <link rel="stylesheet/less" type="text/css" href="template-page-style.less" />
-    
-    <script>
-  less = {
-    env: "development",
-    async: false,
-    fileAsync: false,
-    poll: 1000,
-    functions: {},
-    dumpLineNumbers: "comments",
-    relativeUrls: false,
-    rootpath: ":/a.com/"
-  };
-    </script>
-    <script src="less.js"></script>
+    <link rel="stylesheet" type="text/css" href="template-page-style.css" />
 </head>
 <body>
     <div class="container">
