--- a/thesis-template-page.html
+++ b/thesis-template-page.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-10" role="main">
+            <div class="col-xs-9 col-sm-9 col-md-10" role="main">
                 <h1 id="thesis">Thesis Templates</h1>
                 <p> These thesis templates, many provided by the university themselves as official layout guidelines, include sections for you to add all the relevant author information (your university, department, supervisor, year, etc) along with placeholder chapters for your introduction, background, method, results, conclusion / discussion, references and appendices.</p>
                 <h4 class="region-caption" id="thesis-generic">Generic Thesis Templates</h4>
@@ -588,7 +588,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-2" role="complementary">
+            <div class="col-xs-3 col-sm-3 col-md-2" role="complementary">
                 <nav class="bs-docs-sidebar hidden-print hidden-sm hidden-xs affix">
                     <ul id="sidebar" class="nav nav-stacked">
                         <li>
