--- a/thesis-template-page.html
+++ b/thesis-template-page.html
@@ -589,7 +589,7 @@
                 </div>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-2" role="complementary">
-                <nav class="bs-docs-sidebar hidden-print hidden-sm hidden-xs affix">
+                <nav class="bs-docs-sidebar hidden-print affix">
                     <ul id="sidebar" class="nav nav-stacked">
                         <li>
                             <a href="#thesis">Thesis Templates</a>
