CV templates are added

--- a/thesis-template-page.html
+++ b/thesis-template-page.html
@@ -584,7 +584,189 @@
                 </div>
                 <div>
                     <h1 id="cv">CV Templates</h1>
-                    <p> cv</p>
+                    <p> Great CV is the key element for getting a dream job. These curriculum vitae or shortly CV templates will help you to organize all important information about you effectively. Some of these templates provide a cover letter too</p>
+                    <div class="row equal">
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+awesome">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Awesome Resume&#8725;CV and Cover Letter" src="https://www.papeeria.com/d/file/d6919043b94f9efc9210efe0226da025/d6919043b94f9efc9210efe0226da025.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Awesome Resume&#8725;CV and Cover Letter</h4>
+                                        <div class="description">
+                                            A gorgeous Resumee&#8725;CV template comes with a matching cover letter template to help simplify the process of applying for your next job.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.2 2017.03.27
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+cies">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Cies Resume&#8725;CV" src="https://www.papeeria.com/d/file/da180fccddeab8d58216d90decea5c00/da180fccddeab8d58216d90decea5c00.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Cies Resume&#8725;CV</h4>
+                                        <div class="description">
+                                            The Resume&#8725;CV template features a compact information-rich layout suitable for a mid-career professional. A defining feature of the design is a relatively large block of two-column summary text at the start.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.1 2014.07.20
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+classicthesis">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Classicthesis-Styled CV" src="https://www.papeeria.com/d/file/76f229f07b0565814a3fdfccd9e46d53/76f229f07b0565814a3fdfccd9e46d53.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Classicthesis-Styled CV</h4>
+                                        <div class="description">
+                                            The template combines the Classicthesis style with the currvita document layout to create a beautiful CV&#8725;​Resume.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.0 2012.02.22
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+compact">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Compact Academic CV" src="https://www.papeeria.com/d/file/0c42529479d9368e299edd6bcb08d526/0c42529479d9368e299edd6bcb08d526.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Compact Academic CV</h4>
+                                        <div class="description">
+                                            This compact template is designed for an academic CV.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.0 2012.06.10
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+deedy">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Deedy CV&#8725;Resume" src="https://www.papeeria.com/d/file/88fa0a679db7b83c7620afdb80553d91/88fa0a679db7b83c7620afdb80553d91.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Deedy CV&#8725;Resume</h4>
+                                        <div class="description">
+                                            CV template has a large header with your name and contact information and a two-column layout which concentrates a large amount of information in a small space.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.0 2014.05.05
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+modern">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="ModernCV and Cover Letter" src="https://www.papeeria.com/d/file/0b30cf7cf2642a533a64f963b2583ad5/0b30cf7cf2642a533a64f963b2583ad5.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">ModernCV and Cover Letter</h4>
+                                        <div class="description">
+                                            A multi-page CV and cover letter template is clearly structured with large section titles and important dates on a sidebar. Contact information is clearly displayed in a gray block.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.3 2016.10.29
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+stylish">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Stylish CV and Cover Letter" src="https://www.papeeria.com/d/file/4751704b605b8b04886d5acfcf70914b/4751704b605b8b04886d5acfcf70914b.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Stylish CV and Cover Letter</h4>
+                                        <div class="description">
+                                            The CV template has a stylish header and footer which include your name and contact information. Work experience and education are housed in custom gray boxes which, along with the large header and footer. Also cover letter template is provided.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.0 (CV 2012.07.18, Cover Letter 2013.05.28)
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+twenty+seconds">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Twenty Seconds Resume&#8725;CV" src="https://www.papeeria.com/d/file/3d57408209243c0d8fee7e1f5333f34f/3d57408209243c0d8fee7e1f5333f34f.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Twenty Seconds Resume&#8725;CV</h4>
+                                        <div class="description">
+                                            The Resume&#8725;CV template features a large sidebar with key information. The template body is delimited by large colored section titles (alternating gray and blue).
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.1 2017.01.08
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+Wenneker">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Wenneker Resume&#8725;CV" src="https://www.papeeria.com/d/file/2d13a01157bf05120ac148883900f53e/2d13a01157bf05120ac148883900f53e.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Wenneker Resume&#8725;CV</h4>
+                                        <div class="description">
+                                            The simple and clean Resume&#8725;CV template features a two column layout with the most important information displayed in the left column for immediate overview by potential employers.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.1 2016.06.19
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+Wilson">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Wilson  Resume&#8725;CV" src="https://www.papeeria.com/d/file/2c93616af8bf9812c4fac42ea7a794fb/2c93616af8bf9812c4fac42ea7a794fb.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Wilson  Resume&#8725;CV</h4>
+                                        <div class="description">
+                                            The simple and clean Resume&#8725;CV template features a spacious layout with a conservative style designed to clearly and simply put forward a work experience and information.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.0 2015.01.22
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div>
                     <a class="load-more-item " href="https://www.papeeria.com/templates#type:thesis">
