--- a/thesis-template-page.html
+++ b/thesis-template-page.html
@@ -585,7 +585,7 @@
                 <div>
                     <h1 id="cv">CV Templates</h1>
                     <p> Great CV is the key element for getting a dream job. These curriculum vitae or shortly CV templates will help you to organize all important information about you effectively. Some of these templates provide a cover letter too</p>
-                    <div class="row equal">
+                                       <div class="row equal">
                         <div class="col-sm-6 col-md-4 col-lg-3">
                             <div class="template-item">
                                 <a href="https://www.papeeria.com/templates#type:cv+awesome">
@@ -678,6 +678,42 @@
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-3">
                             <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+long">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Long Professional CV" src="https://www.papeeria.com/d/file/0df1b7bb20854dd9a995db8dd11ac6f0/0df1b7bb20854dd9a995db8dd11ac6f0.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Long Professional CV</h4>
+                                        <div class="description">
+                                            This CV template is clearly structured with bold centered category names for each section. This template is conducive to longer CVs since there is no aesthetic limit to how much information can be placed in each section. Would suit a professional in the mid- to late-stage of their career.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.1 2012.12.09
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+medium+graduate">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Medium Length Graduate CV" src="https://www.papeeria.com/d/file/ce4938898a7e169dcc3cab80bbb4f7ee/ce4938898a7e169dcc3cab80bbb4f7ee.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Medium Length Graduate CV</h4>
+                                        <div class="description">
+                                            This CV template has section headings on the left side of the document with section content on the right. Bullet points are used to separate different tasks within each job. This template is more suited to a short or medium length cv taking at most two pages. Nice option for a recent graduate with limited experience looking for their first job.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.1 2012.09.09
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
                                 <a href="https://www.papeeria.com/templates#type:cv+modern">
                                     <div class="open-template">
                                         <div class="open-template-text">Open Template</div>
@@ -732,6 +768,24 @@
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-3">
                             <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:cv+Two+Column+One">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Two Column One-Page CV" src="https://www.papeeria.com/d/file/5ffea22324eb11e28145ece0e645c689/5ffea22324eb11e28145ece0e645c689.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Two Column One-Page CV</h4>
+                                        <div class="description">
+                                            This template fits a large amount of information on a single page to make a short stylized CV. Sections can be easily moved if, for example, education is more important than work experience.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.1 2013.01.24
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
                                 <a href="https://www.papeeria.com/templates#type:cv+Wenneker">
                                     <div class="open-template">
                                         <div class="open-template-text">Open Template</div>
@@ -769,7 +823,7 @@
                     </div>
                 </div>
                 <div>
-                    <a class="load-more-item " href="https://www.papeeria.com/templates#type:thesis">
+                    <a class="load-more-item " href="https://www.papeeria.com/templates">
                         More Templates
                     </a>
                 </div>
